--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
       </div>
       <p class="text-center text-xl md:text-2xl text-gray-200">Over 3,117 neighbours shared over 135,883 things</p>
       <button onclick="openDialog()" class="bg-[#F89831] px-10 py-4 thanks text-lg md:text-2xl font-base">Thank you and
-        good
-        bye!</button>
+        goodbye!</button>
     </div>
     <img src="assets/people.svg" alt="Streetbank logo" class="absolute bottom-0 left-0 w-full">
 
